src/objects/Broadcast__c.object
<CustomObject>
    <description>This object is storing the policy details.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked then the record is displayed in the volunteer landing page.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broadcast_Message__c</fullName>
        <description>It hold the Brodcast Message details</description>
        <label>Broadcast Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will category the broadcast message based on the chatper.</description>
        <label>Chapter Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Chapter Name should be chapter record type</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broadcast</relationshipLabel>
        <relationshipName>Broadcast</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>It holds the Date value</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Broadcast</label>
    <listViews>
        <fullName>All_Broadcast</fullName>
        <columns>NAME</columns>
        <columns>Chapter_Name__c</columns>
        <columns>Broadcast_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Broadcast</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Broadcast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broadcast</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>